--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Stickly Notes - Murais colaborativos" />
+
+    <base href="/" />
+    
     <title>Stickly Notes</title>
     
     <!-- Tailwind CSS - apenas para desenvolvimento -->
