--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,17 @@
       };
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        screens: {
+          'xs': '475px',
+        }
+      }
+    }
+  }
+</script>
   </head>
   <body>
     <noscript>Você precisa habilitar JavaScript para usar este app.</noscript>
